# SmartBot2.0

./: CMakeLists.txt  action_manager.h  address_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memory_manager.h  process_manager.h  tab_healer.cpp  tab_healer.h  tab_healer.ui  tab_spell_healer.cpp  tab_spell_healer.h  tab_spell_healer.ui
core/: input_manager.h
helper/: defines.h  enums.h  includes.h  singleton.h
wpp/: filesystem.h  process.hpp  timer_chronometer.h
